[package]
name = "numa-shim"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "100% Rust NUMA detection and binding — no C/C++ libraries (no libnuma, no hwloc). Linux mbind(2) via raw syscall(2), Windows VirtualAllocExNuma, sysfs cpumap reader. macOS/miri no-op. Zero crate deps by default. forbid(unsafe_code)-friendly for consumers."
readme = "README.md"
repository = "https://github.com/PHPCraftdream/sefer-alloc"
homepage = "https://github.com/PHPCraftdream/sefer-alloc/tree/main/crates/numa"
documentation = "https://docs.rs/numa-shim"
keywords = ["numa", "mbind", "scheduling", "memory", "sysfs"]
categories = ["os", "memory-management", "no-std::no-alloc"]

[features]
default = []
vmem-integration = ["dep:aligned-vmem"]
# Test-only: replace platform syscalls with a recording mock.  Lets every
# CI run (any target) assert the wrapping logic without touching the real
# kernel.  See docs/NUMA_TESTING_OPTIONS.md Phase 1.
mock = []

[dependencies]
aligned-vmem = { version = "0.2", path = "../vmem", optional = true }
