[package]
name = "racy-ptr-cell"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Allocation-free, no_std lazy CAS-published pointer cell (UNINIT -> INITIALIZING -> READY over one AtomicPtr) with fallible init: OOM rolls the sentinel back and losers RE-RACE (unlike OnceLock, which poisons/blocks). Safe inside a #[global_allocator] (no std sync, no reentrancy, no heap). Ships executable loom proofs run against the real type, with #[should_panic] counterfactuals."
readme = "README.md"
repository = "https://github.com/PHPCraftdream/sefer-alloc"
homepage = "https://github.com/PHPCraftdream/sefer-alloc/tree/main/crates/racy-ptr-cell"
documentation = "https://docs.rs/racy-ptr-cell"
keywords = ["oncelock", "lock-free", "allocator", "cas", "no-std"]
categories = ["memory-management", "concurrency", "no-std::no-alloc"]

[lints.rust]
# `loom` is a build-time cfg (set via `RUSTFLAGS="--cfg loom"`) that swaps the
# cell's atomics for `loom::sync::atomic` so the shipped loom tests exercise the
# REAL `RacyPtrCell` type. Declare it so `unexpected_cfgs` stays silent.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
# Zero non-std deps in a NORMAL build. Under `--cfg loom` ONLY, the cell aliases
# its atomics to `loom::sync::atomic` so the shipped loom tests exercise the
# REAL `RacyPtrCell` type — so `loom` is a `cfg(loom)`-gated LIBRARY dependency
# (not merely a dev-dependency): the cell's own `src/lib.rs` references it. A
# normal `cargo build` (no `--cfg loom`) pulls in zero non-std deps.

[target.'cfg(loom)'.dependencies]
loom = "0.7"
