[package]
name = "tagged-index-stack"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Allocation-free, no_std, zero-unsafe lock-free LIFO free-list of small indices (a slot recycler) with an ABA-defeating monotonic tag packed alongside the index in ONE atomic word. Const-generic index width, slot-resident OR owned-array links via a trait, the H-2 empty-transition tag-preservation fix documented, and a ~89-year 48-bit tag-width budget analysis. Ships executable loom proofs run against the real type, with #[should_panic] counterfactuals (untagged corruption + empty-transition tag-reset ABA)."
readme = "README.md"
repository = "https://github.com/PHPCraftdream/sefer-alloc"
homepage = "https://github.com/PHPCraftdream/sefer-alloc/tree/main/crates/tagged-index-stack"
documentation = "https://docs.rs/tagged-index-stack"
keywords = ["lock-free", "aba", "free-list", "slab", "no-std"]
categories = ["concurrency", "data-structures", "no-std::no-alloc"]

[lints]
# `loom` / `kani` cfg declarations are shared at the workspace root
# (`[workspace.lints.rust]`); `kani` is root-only and harmlessly unused here.
workspace = true

[dependencies]
# Zero non-std deps in a NORMAL build. Under `--cfg loom` ONLY, the stack aliases
# its atomics to `loom::sync::atomic` so the shipped loom tests exercise the REAL
# type — so `loom` is a `cfg(loom)`-gated LIBRARY dependency (not merely a
# dev-dependency): the crate's own `src/lib.rs` references it. A normal
# `cargo build` (no `--cfg loom`) pulls in zero non-std deps.

[target.'cfg(loom)'.dependencies]
loom = "0.7"
