[package]
name = "aligned-vmem"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Cross-platform aligned anonymous virtual memory: reserve a power-of-two-aligned span (over-reserve + trim), commit/decommit pages, release — mmap/madvise on Unix, VirtualAlloc/MEM_DECOMMIT on Windows. 100% Rust, zero crate deps, no C/C++ libraries pulled in, miri-friendly."
readme = "README.md"
repository = "https://github.com/PHPCraftdream/sefer-alloc"
homepage = "https://github.com/PHPCraftdream/sefer-alloc/tree/main/crates/vmem"
documentation = "https://docs.rs/aligned-vmem"
keywords = ["mmap", "virtualalloc", "memory", "decommit", "aligned"]
categories = ["memory-management", "os", "no-std::no-alloc"]

[features]
# B0 (R7 Workstream B): EXPERIMENTAL incremental-commit foundation.
# When enabled, exposes `reserve_aligned_lazy` (reserve VA + commit only an
# initial sub-range) and `commit_range` (commit additional pages within an
# existing reservation). Windows-only optimisation: on non-Windows and under
# miri the lazy path falls back to the eager `reserve_aligned` (all pages
# committed up front, identical observable behaviour). Off by default — NOT
# part of any default bundle. Feature-OFF builds are byte-for-byte identical.
alloc-lazy-commit = []

[dependencies]
